devel
-----

* Added a new maintenance mode tab to the web UI in cluster mode. 
  The new tab shows the current state of the cluster supervision maintenance 
  and allows to enable/disable the maintenance mode from there. The tab will
  only be visible in the `_system` database. The required privileges for
  displaying the maintenance mode status and/or changing it are the as for 
  using the REST APIs for the maintenance mode.

* Fixed a problem that coordinators would vanish from the UI and the Health
  API if one switched the agency Supervision into maintenance mode and kept
  left that maintenance mode on for more than 24h.

* Fixed a bug in the web interface that displayed the error "Not authorized to 
  execute this request" when trying to create an index in the web interface in a
  database other than `_system` with a user that does not have any access
  permissions for the `_system` database.
  The error message previously displayed error actually came from an internal
  request made by the web interface, but it did not affect the actual index
  creation.

* Added ability to display Coordinator and DBServer logs from inside the Web UI
  in a clustered environment when privileges are sufficient. 
  Additionally, displayed log entries can now be downloaded from the web UI in
  single server and in cluster mode.

* The Web UI's info view of a collection now displays additional properties and
  statistics (e.g. RocksDB related figures, sharding information and more).

* Improve progress reporting for shard synchronization in the web UI.
  The UI will now show how many shards are actively syncing data, and will 
  provide a better progress indicator, especially if there is more than one
  follower for a shard.

* Fixed issue BTS-309: The Graph API (Gharial) did not respond with the correct
  HTTP status code when validating edges. It now responds with 400 (Bad Request)
  as documented and a new, more precise error code (1947) and message if a vertex