@@ -265,8 +265,6 @@ Result QueryStreamCursor::dumpSync(VPackBuilder& builder) {
     aql::ExecutionEngine* engine = _query->rootEngine();
     TRI_ASSERT(engine != nullptr);
 
-    SharedAqlItemBlockPtr value;
-
     ExecutionState state = ExecutionState::WAITING;
     while (state == ExecutionState::WAITING) {
       state = prepareDump();
@@ -322,11 +320,22 @@ void QueryStreamCursor::resetWakeupHandler() {
 }
 
 ExecutionState QueryStreamCursor::writeResult(VPackBuilder& builder) {
+  ResourceMonitor& resourceMonitor = _query->resourceMonitor();
+
+  // this is here to track _temporary_ memory usage during result
+  // building.
+  ResourceUsageScope guard(resourceMonitor);
+  auto const& buffer = builder.bufferRef();
+
   bool const silent = _query->queryOptions().silent;
 
   // reserve some space in Builder to avoid frequent reallocs
   if (!silent) {
-    builder.reserve(16 * 1024);
+    constexpr uint64_t reserveSize = 16 * 1024;
+    // track memory usage
+    guard.increase(reserveSize);
+    // reserve the actual memory
+    builder.reserve(reserveSize);
   }
 
   builder.add("result", VPackValue(VPackValueType::Array, true));
@@ -346,9 +355,14 @@ ExecutionState QueryStreamCursor::writeResult(VPackBuilder& builder) {
       if (!silent && resultRegister.isValid()) {
         AqlValue const& value = block->getValueReference(_queryResultPos, resultRegister);
         if (!value.isEmpty()) {  // ignore empty blocks (e.g. from UpdateBlock)
+          uint64_t oldCapacity = buffer.capacity();
+
           value.toVelocyPack(&vopts, builder, /*resolveExternals*/false,
                              /*allowUnindexed*/true);
           ++rowsWritten;
+        
+          // track memory usage
+          guard.increase(buffer.capacity() - oldCapacity);
         }
       }
       ++_queryResultPos;
