@@ -77,6 +77,7 @@ ExportFeature::ExportFeature(application_features::ApplicationServer& server, in
       _progress(true),
       _useGzip(false),
       _firstLine(true),
+      _batchSize(1000),
       _skippedDeepNested(0),
       _httpRequestsDone(0),
       _currentCollection(),
@@ -110,6 +111,10 @@ void ExportFeature::collectOptions(std::shared_ptr<options::ProgramOptions> opti
 
   options->addOption("--output-directory", "output directory",
                      new StringParameter(&_outputDirectory));
+  
+  options->addOption("--batch-size", "number of documents to return in each batch",
+                     new UInt64Parameter(&_batchSize))
+                     .setIntroducedIn(30800);
 
   options->addOption("--overwrite", "overwrite data in output directory",
                      new BooleanParameter(&_overwrite));
@@ -318,6 +323,7 @@ void ExportFeature::collectionExport(SimpleHttpClient* httpClient) {
     post.add("@collection", VPackValue(collection));
     post.close();
     post.add("ttl", VPackValue(::ttlValue));
+    post.add("batchSize", VPackValue(_batchSize));
     post.add("options", VPackValue(VPackValueType::Object));
     post.add("stream", VPackSlice::trueSlice());
     post.close();
@@ -371,6 +377,7 @@ void ExportFeature::queryExport(SimpleHttpClient* httpClient) {
   post.openObject();
   post.add("query", VPackValue(_query));
   post.add("ttl", VPackValue(::ttlValue));
+  post.add("batchSize", VPackValue(_batchSize));
   post.add("options", VPackValue(VPackValueType::Object));
   post.add("stream", VPackSlice::trueSlice());
   post.close();
@@ -662,6 +669,7 @@ directed="1">
     post.add("@collection", VPackValue(collection));
     post.close();
     post.add("ttl", VPackValue(::ttlValue));
+    post.add("batchSize", VPackValue(_batchSize));
     post.add("options", VPackValue(VPackValueType::Object));
     post.add("stream", VPackSlice::trueSlice());
     post.close();
