@@ -82,8 +82,8 @@ class ExportFeature final : public application_features::ApplicationFeature,
   bool _overwrite;
   bool _progress;
   bool _useGzip;
-
   bool _firstLine;
+  uint64_t _batchSize;
   uint64_t _skippedDeepNested;
   uint64_t _httpRequestsDone;
   std::string _currentCollection;
